kubernetes-manifests/ingress/doodle-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: doodle-ingress-https
  namespace: osai-kube
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`doodle.moz8.net`)
      kind: Rule
      services:
        - name: doodle-service
          port: 3000 # Gatekeeper
  tls:
    certResolver: myresolver
