kubernetes-manifests/ingress/nginx-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.moz8.net`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
