kubernetes-manifests/ingress/supervisor-ingress-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: supervisor-ingress-https
  namespace: osai-kube
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`supervisor.moz8.net`)
      kind: Rule
      services:
        - name: supervisor-service
          port: 80
  tls:
    certResolver: myresolver
